--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
         text-align: center;
         margin-top: 50px;
          color: #803030;
-        font-family: "Comic Neue", cursive;
+        font-family: "Special Elite", system-ui;
         font-weight: 700;
         font-style: normal;
        color: #99582a
