--- a/app/views/pages/artwork.html.erb
+++ b/app/views/pages/artwork.html.erb
@@ -1,68 +1,11 @@
+<h2>Artwork</h2>
 
 <div class="container">
 <div class="row">
-<div class="col-md-6 mb-5">
-<div class="card">
-<%= image_tag "Heaven is Silent.png", alt: "book", width: 290 %>
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-    <path
-      d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
-        14.7065 9.70641L20 15.0104V5ZM2 3.9934C2 3.44476 2.45531 3
-        2.9918 3H21.0082C21.556 3 22 3.44495 22 3.9934V20.0066C22
-        20.5552 21.5447 21 21.0082 21H2.9918C2.44405 21 2 20.5551
-        2 20.0066V3.9934ZM8 11C6.89543 11 6 10.1046 6 9C6 7.89543
-        6.89543 7 8 7C9.10457 7 10 7.89543 10 9C10 10.1046
-        9.10457 11 8 11Z"
-    ></path>
-  </svg>
-  <div class="card__content">
-    <p class="card__title">HEAVEN IS SILENT  2024
-
-</p>
-    <p class="card__description">
-Critics say “The best writings about artists are always autobiographical.” In the case of women artists they're also essential if any trace of our art is to remain. This book is a personal reminisce of my work and life.  It's a much more in-depth testimony of my adventures than has ever been published before. It includes an interplay of narrative, letters, critiques and photographs. Critics have said my former books are “like a conversation with the artist”.
-    </p>
-  </div>
-</div>
-</div>
-
 
 <div class="col-md-6 mb-5">
 <div class="card">
-<%= image_tag "Art & Creaky bonesJPG.JPG", alt: "book", width: 335 %>
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-    <path
-      d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
-        14.7065 9.70641L20 15.0104V5ZM2 3.9934C2 3.44476 2.45531 3
-        2.9918 3H21.0082C21.556 3 22 3.44495 22 3.9934V20.0066C22
-        20.5552 21.5447 21 21.0082 21H2.9918C2.44405 21 2 20.5551
-        2 20.0066V3.9934ZM8 11C6.89543 11 6 10.1046 6 9C6 7.89543
-        6.89543 7 8 7C9.10457 7 10 7.89543 10 9C10 10.1046
-        9.10457 11 8 11Z"
-    ></path>
-  </svg>
-  <div class="card__content">
-    <p class="card__title">ART & CREAKY BONES  2019
-</p>
-    <p class="card__description">
-This book won 6 literary awards in the categories, Art, Aging and Inspiration. It's goal is to help seniors find a vibrant, active, healthier life as they get older. The secret, scientists say, is finding a passion for something creative that can be a real exciting part of life. It's a colorful, cheerful, book that can bring comfort and motivation to people of any age. If you would like to read this Art & Creaky Bones it can be found at Amazon with this link.
-<%= link_to "https://www.amazon.com/dp/1729874630/ref=cm_sw_em_r_mt_dp_i13rFbKFA9J8X", class: "btn2" do %>
-  <button class="cta">
-    <span class="hover-underline-animation">Buy on Amazon</span>
-    <svg id="arrow-horizontal" xmlns="http://www.w3.org/2000/svg" width="23" height="7" viewBox="0 0 46 16">
-      <path id="Path_10" data-name="Path 10" d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z" transform="translate(30)"></path>
-    </svg>
-  </button>
-<% end %>
-    </p>
-  </div>
-</div>
-</div>
-
-
-<div class="col-md-6 mb-5">
-<div class="card">
-<%= image_tag "Plenitude scrolls.jpg", alt: "paterns", width: 500 %>
+<%= image_tag "Plenitude scrolls.jpg", alt: "plenitude", width: 530 %>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
     <path
       d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
@@ -90,6 +33,28 @@ had died. Their joyful appearance is rather strange because the drawings origina
 </div>
 </div>
 
+<div class="col-md-6 mb-5">
+<div class="card">
+<%= image_tag "Plenitude more scrolls.jpg", alt: "paterns", width: 520 %>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <path
+      d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
+        14.7065 9.70641L20 15.0104V5ZM2 3.9934C2 3.44476 2.45531 3
+        2.9918 3H21.0082C21.556 3 22 3.44495 22 3.9934V20.0066C22
+        20.5552 21.5447 21 21.0082 21H2.9918C2.44405 21 2 20.5551
+        2 20.0066V3.9934ZM8 11C6.89543 11 6 10.1046 6 9C6 7.89543
+        6.89543 7 8 7C9.10457 7 10 7.89543 10 9C10 10.1046
+        9.10457 11 8 11Z"
+    ></path>
+  </svg>
+  <div class="card__content">
+    <p class="card__title"> PLENITUDE  scrolls 2016 - 2023
+</p>
+    <p class="card__description">
+    </p>
+  </div>
+</div>
+</div>
 
 <div class="col-md-6 mb-5">
 <div class="card">
@@ -106,8 +71,7 @@ had died. Their joyful appearance is rather strange because the drawings origina
     ></path>
   </svg>
   <div class="card__content">
-    <p class="card__title"> RADIANCE 2015 -2016
-
+    <p class="card__title"> RADIANCE NIGHT 2015 -2016
 </p>
     <p class="card__description">
 Radiance, a permanent solar light Installation, is a private commission comprised of 13 stainless steel structures, each with 18 solar lights. The poles are 20 cm wide x 400 cm tall.
@@ -117,10 +81,9 @@ Solar lights are like personal signs of contemporary life, but somehow infused w
 </div>
 </div>
 
-
-    <div class="col-md-6 mb-5">
+<div class="col-md-6 mb-5">
 <div class="card">
-<%= image_tag "Art Without rejection book.jpg", alt: "book", width: 310 %>
+<%= image_tag "Radiance day.JPG", alt: "radiance", width: 700 %>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
     <path
       d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
@@ -133,18 +96,14 @@ Solar lights are like personal signs of contemporary life, but somehow infused w
     ></path>
   </svg>
   <div class="card__content">
-    <p class="card__title">ART WITHOUT REJECTION 1993
+    <p class="card__title"> RADIANCE DAY 2015 -2016
+
 </p>
     <p class="card__description">
-Art Without Rejection, used in more than 200 universities and sold in major museums around the world, questions harmful practices in the art world and gives some wise and original alternatives. It has helped and inspired many artists and teachers. Here are two examples.
-“I generally whip right through a book, but Art Without Rejection provokes thought to such a degree that each paragraph requires me to sit back and contemplate. The book fairly whistles! She has such a forceful voice and is so forthright...I will continue to savor this book as I would a kilo of Beluga... enough to enrich the day and digest what I have consumed.
-Joan Messner, New York City
-“Two months ago Art Without Rejection sang to me and I picked it up off the shelf at the Art Center. It has made a profound change in my life, practice and perspective...It's a guiding light for artists... My own paintings and practice have been profoundly influenced by Art Without Rejection. I am drinking her words of nourishment and strength...Ezguel Olvera, California
     </p>
   </div>
 </div>
 </div>
-
 
 <div class="col-md-6 mb-5">
 <div class="card">
@@ -174,10 +133,33 @@ Alexandra Tuttle
 </div>
 </div>
 
+<div class="col-md-6 mb-5">
+<div class="card">
+<%= image_tag "Hieroglyphics Guggenheim040.jpg", alt: "hieroglyphics", width: 520 %>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <path
+      d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
+        14.7065 9.70641L20 15.0104V5ZM2 3.9934C2 3.44476 2.45531 3
+        2.9918 3H21.0082C21.556 3 22 3.44495 22 3.9934V20.0066C22
+        20.5552 21.5447 21 21.0082 21H2.9918C2.44405 21 2 20.5551
+        2 20.0066V3.9934ZM8 11C6.89543 11 6 10.1046 6 9C6 7.89543
+        6.89543 7 8 7C9.10457 7 10 7.89543 10 9C10 10.1046
+        9.10457 11 8 11Z"
+    ></path>
+  </svg>
+  <div class="card__content">
+    <p class="card__title"> HIEROGLYPHICS 1982 – 1992
+</p>
+    <p class="card__description">
+      Sheila Reid 'Hieroglyphics' Guggengeim Museum
+    </p>
+  </div>
+</div>
+</div>
 
 <div class="col-md-6 mb-5">
 <div class="card">
-<%= image_tag "Architectural Patterns Grand Palais.jpg", alt: "paterns", width: 500 %>
+<%= image_tag "Architectural Patterns Grand Palais.jpg", alt: "paterns", width: 530 %>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
     <path
       d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
@@ -209,10 +191,34 @@ Lisa
 </div>
 </div>
 
+<div class="col-md-6 mb-5">
+<div class="card">
+<%= image_tag "Architectural Patterns in Vence jpg (maybe).jpg", alt: "paterns", width: 520 %>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <path
+      d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
+        14.7065 9.70641L20 15.0104V5ZM2 3.9934C2 3.44476 2.45531 3
+        2.9918 3H21.0082C21.556 3 22 3.44495 22 3.9934V20.0066C22
+        20.5552 21.5447 21 21.0082 21H2.9918C2.44405 21 2 20.5551
+        2 20.0066V3.9934ZM8 11C6.89543 11 6 10.1046 6 9C6 7.89543
+        6.89543 7 8 7C9.10457 7 10 7.89543 10 9C10 10.1046
+        9.10457 11 8 11Z"
+    ></path>
+  </svg>
+  <div class="card__content">
+    <p class="card__title"> ARCHITECTURAL PATTERNS
+1988 – 1990    (3 structures each 5 meters tall)
+</p>
+    <p class="card__description">
+
+    </p>
+  </div>
+</div>
+</div>
 
 <div class="col-md-6 mb-5">
 <div class="card">
-<%= image_tag "liberty .jpg", alt: "paterns", width: 500 %>
+<%= image_tag "liberty .jpg", alt: "paterns", width: 530 %>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
     <path
       d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
@@ -229,6 +235,30 @@ Lisa
 </p>
     <p class="card__description">
 Libery was a structure made at the request of a group of artists doing a show of monumental works that traveled around France. It was called Liberty partly because of the bright colors and partly because it was celebrating freedom from old ideas and customs.
+    </p>
+  </div>
+</div>
+</div>
+
+<div class="col-md-6 mb-5">
+<div class="card">
+<%= image_tag "liberty  (outdoors).jpg", alt: "paterns", width: 790 %>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <path
+      d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
+        14.7065 9.70641L20 15.0104V5ZM2 3.9934C2 3.44476 2.45531 3
+        2.9918 3H21.0082C21.556 3 22 3.44495 22 3.9934V20.0066C22
+        20.5552 21.5447 21 21.0082 21H2.9918C2.44405 21 2 20.5551
+        2 20.0066V3.9934ZM8 11C6.89543 11 6 10.1046 6 9C6 7.89543
+        6.89543 7 8 7C9.10457 7 10 7.89543 10 9C10 10.1046
+        9.10457 11 8 11Z"
+    ></path>
+  </svg>
+  <div class="card__content">
+    <p class="card__title"> LIBERTY OUTDOORS 1987
+</p>
+    <p class="card__description">
+
     </p>
   </div>
 </div>
@@ -261,10 +291,33 @@ Magali Michel  art critic (translation)
 </div>
 </div>
 
+<div class="col-md-6 mb-5">
+<div class="card">
+<%= image_tag "'Thirteen Triangles'  close-up.jpg", alt: "triangles", width: 810 %>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <path
+      d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
+        14.7065 9.70641L20 15.0104V5ZM2 3.9934C2 3.44476 2.45531 3
+        2.9918 3H21.0082C21.556 3 22 3.44495 22 3.9934V20.0066C22
+        20.5552 21.5447 21 21.0082 21H2.9918C2.44405 21 2 20.5551
+        2 20.0066V3.9934ZM8 11C6.89543 11 6 10.1046 6 9C6 7.89543
+        6.89543 7 8 7C9.10457 7 10 7.89543 10 9C10 10.1046
+        9.10457 11 8 11Z"
+    ></path>
+  </svg>
+  <div class="card__content">
+    <p class="card__title"> THIRTEEN TRIANGLES   1986 - 1989
+</p>
+    <p class="card__description">
+    </p>
+  </div>
+</div>
+</div>
+
 
 <div class="col-md-6 mb-5">
 <div class="card">
-<%= image_tag "Sheila Reid's 'Feminine Reflections'.jpg", alt: "reflections", width: 500 %>
+<%= image_tag "Sheila Reid's 'Feminine Reflections'.jpg", alt: "reflections", width: 530 %>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
     <path
       d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
@@ -290,10 +343,32 @@ but because of the whole.”
 </div>
 </div>
 
+<div class="col-md-6 mb-5">
+<div class="card">
+<%= image_tag "Feminine Reflect close up'.jpg", alt: "reflections", width: 800 %>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <path
+      d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
+        14.7065 9.70641L20 15.0104V5ZM2 3.9934C2 3.44476 2.45531 3
+        2.9918 3H21.0082C21.556 3 22 3.44495 22 3.9934V20.0066C22
+        20.5552 21.5447 21 21.0082 21H2.9918C2.44405 21 2 20.5551
+        2 20.0066V3.9934ZM8 11C6.89543 11 6 10.1046 6 9C6 7.89543
+        6.89543 7 8 7C9.10457 7 10 7.89543 10 9C10 10.1046
+        9.10457 11 8 11Z"
+    ></path>
+  </svg>
+  <div class="card__content">
+    <p class="card__title">FEMININE REFLECTIONS 1985
+</p>
+    <p class="card__description">
+    </p>
+  </div>
+</div>
+</div>
 
 <div class="col-md-6 mb-5">
 <div class="card">
-<%= image_tag "Soft Patterns at Utah Museum of Fine Art.JPG", alt: "paterns", width: 500 %>
+<%= image_tag "Soft Patterns at Utah Museum of Fine Art.JPG", alt: "paterns", width: 530 %>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
     <path
       d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
@@ -326,7 +401,30 @@ but because of the whole.”
   </div>
 </div>
 </div>
+
+<div class="col-md-6 mb-5">
+<div class="card">
+<%= image_tag "Soft Patterns  panel.png", alt: "paterns", width: 530 %>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <path
+      d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
+        14.7065 9.70641L20 15.0104V5ZM2 3.9934C2 3.44476 2.45531 3
+        2.9918 3H21.0082C21.556 3 22 3.44495 22 3.9934V20.0066C22
+        20.5552 21.5447 21 21.0082 21H2.9918C2.44405 21 2 20.5551
+        2 20.0066V3.9934ZM8 11C6.89543 11 6 10.1046 6 9C6 7.89543
+        6.89543 7 8 7C9.10457 7 10 7.89543 10 9C10 10.1046
+        9.10457 11 8 11Z"
+    ></path>
+  </svg>
+  <div class="card__content">
+    <p class="card__title">SOFT PATTERNS  panels 1973 – 1978
+</p>
+    <p class="card__description">
+    </p>
+  </div>
 </div>
+</div>
+
 </div>
 </div>
 
@@ -350,6 +448,28 @@ but because of the whole.”
   </svg>
 </button><% end %>
 
+&nbsp;
+
+&nbsp;
+
+<%= link_to books_path, class: "btn2" do %>
+  <button class="cta">
+  <span class="hover-underline-animation"> Books </span>
+  <svg
+    id="arrow-horizontal"
+    xmlns="http://www.w3.org/2000/svg"
+    width="23"
+    height="7"
+    viewBox="0 0 46 16"
+  >
+    <path
+      id="Path_10"
+      data-name="Path 10"
+      d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
+      transform="translate(30)"
+    ></path>
+  </svg>
+</button><% end %>
 
 &nbsp;
 
