--- a/app/views/pages/biography.html.erb
+++ b/app/views/pages/biography.html.erb
@@ -1,4 +1,4 @@
-<h2>BIOGRAPHY</h2>
+<h2>Biography</h2>
 <div class= "biography">
 "Naturally, it's unusual for a woman artist to have her works collected and/or exhibited by 33 museums in 12 countries. However, what struck her as odd was that in 1987, when Guggenheim curator Lisa Dennison approached her for an installation of her Hieroglyphics, there were 34 male artists collected alongside her, making her the only woman.
 
@@ -11,7 +11,7 @@ Born in Minneapolis, she was the daughter of a farmer's son and a mother from a 
 
 <h6>contact: Sheila8383@aol.com</h6>
 
-<h2>EXHIBITIONS</h2>
+<h2>Exibitions</h2>
 <div class= "ul1">
 <ul>
 <li>Palazzo Arengario, Milan, Italy 1977</li>
@@ -44,7 +44,7 @@ Born in Minneapolis, she was the daughter of a farmer's son and a mother from a 
 
 
 
-<h2>MUSEUM COLLECTIONS</h2>
+<h2>Museum Collections</h2>
 <div class= "ul2">
 <ul>
 <li>Solomon Guggenheim Museum, New York City 1987</li>
@@ -92,5 +92,27 @@ Born in Minneapolis, she was the daughter of a farmer's son and a mother from a 
       transform="translate(30)"
     ></path>
   </svg>
-</button>
-<% end %>
+</button><% end %>
+
+&nbsp;
+
+&nbsp;
+
+<%= link_to books_path, class: "btn2" do %>
+  <button class="cta">
+  <span class="hover-underline-animation"> Books </span>
+  <svg
+    id="arrow-horizontal"
+    xmlns="http://www.w3.org/2000/svg"
+    width="23"
+    height="7"
+    viewBox="0 0 46 16"
+  >
+    <path
+      id="Path_10"
+      data-name="Path 10"
+      d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
+      transform="translate(30)"
+    ></path>
+  </svg>
+</button><% end %>
