--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,5 +20,27 @@
       transform="translate(30)"
     ></path>
   </svg>
-</button>
-<% end %>
+</button><% end %>
+
+&nbsp;
+
+&nbsp;
+
+<%= link_to books_path, class: "btn2" do %>
+  <button class="cta">
+  <span class="hover-underline-animation"> Books </span>
+  <svg
+    id="arrow-horizontal"
+    xmlns="http://www.w3.org/2000/svg"
+    width="23"
+    height="7"
+    viewBox="0 0 46 16"
+  >
+    <path
+      id="Path_10"
+      data-name="Path 10"
+      d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
+      transform="translate(30)"
+    ></path>
+  </svg>
+</button><% end %>
