--- a/app/views/pages/artwork.html.erb
+++ b/app/views/pages/artwork.html.erb
@@ -51,6 +51,11 @@ had died. Their joyful appearance is rather strange because the drawings origina
     <p class="card__title"> PLENITUDE  scrolls 2016 - 2023
 </p>
     <p class="card__description">
+    PLENITUDE  2016 - 2023
+Plenitude looks like it's about fullness, completeness and abundance. It's true there is a joyfulness about making art when one is older. Everyday can be like a new experience
+full of forms and vibrant color. And I admit my style has grown less circumscribed and rougher with age, which scientists say is a natural phenomenon. Glorious, colorful
+images are a gift. The most curious thing about them is that they're so joyful when they
+were made from 28 years of drawings which were almost all done when I was grieving for someone dear who had died.
     </p>
   </div>
 </div>
