--- a/app/views/pages/books.html.erb
+++ b/app/views/pages/books.html.erb
@@ -3,8 +3,8 @@
 
   <div class="row">
     <div class="col-md-5 mb-4">
-      <div class="books">
-        <%= image_tag "Heaven is Silent.png", alt: "book", width: 400 %>
+      <div class="card">
+        <%= image_tag "Heaven is Silent.png", alt: "book", width: 480 %>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <path
               d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
@@ -16,10 +16,10 @@
               9.10457 11 8 11Z"
             ></path>
           </svg>
-    <div class="books__content">
-      <p class="books__title">HEAVEN IS SILENT  2024
+    <div class="card__content">
+      <p class="card__title">HEAVEN IS SILENT  2024
   </p>
-      <p class="books__description">
+      <p class="card__description">
   Critics say “The best writings about artists are always autobiographical.” In the case of women artists they're also essential if any trace of our art is to remain. This book is a personal reminisce of my work and life.  It's a much more in-depth testimony of my adventures than has ever been published before. It includes an interplay of narrative, letters, critiques and photographs. Critics have said my former books are “like a conversation with the artist”.
       </p>
     </div>
@@ -28,7 +28,7 @@
 
 
   <div class="col-md-5 mb-4">
-  <div class="books">
+  <div class="card">
   <%= image_tag "Art & Creaky bonesJPG.JPG", alt: "book", width: 620 %>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
       <path
@@ -41,10 +41,10 @@
           9.10457 11 8 11Z"
       ></path>
     </svg>
-    <div class="books__content">
-      <p class="books__title">ART & CREAKY BONES  2019
+    <div class="card__content">
+      <p class="card__title">ART & CREAKY BONES  2019
   </p>
-      <p class="books__description">
+      <p class="card__description">
   This book won 6 literary awards in the categories, Art, Aging and Inspiration. It's goal is to help seniors find a vibrant, active, healthier life as they get older. The secret, scientists say, is finding a passion for something creative that can be a real exciting part of life. It's a colorful, cheerful, book that can bring comfort and motivation to people of any age. If you would like to read this Art & Creaky Bones it can be found at Amazon with this link.
   <%= link_to "https://www.amazon.com/dp/1729874630/ref=cm_sw_em_r_mt_dp_i13rFbKFA9J8X", class: "btn2" do %>
     <button class="cta">
@@ -61,8 +61,8 @@
 
 
     <div class="col-md-5 mb-4">
-  <div class="books">
-  <%= image_tag "Art Without rejection book.png", alt: "book", width: 440 %>
+  <div class="card">
+  <%= image_tag "Capture d'écran 2024-03-28 093835.png", alt: "book", width: 500 %>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
       <path
         d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591
@@ -74,14 +74,12 @@
           9.10457 11 8 11Z"
       ></path>
     </svg>
-    <div class="books__content">
+    <div class="card__content">
       <p class="card__title">ART WITHOUT REJECTION 1993
   </p>
-      <p class="books__description">
-  Art Without Rejection, used in more than 200 universities and sold in major museums around the world, questions harmful practices in the art world and gives some wise and original alternatives. It has helped and inspired many artists and teachers. Here are two examples.
-  “I generally whip right through a book, but Art Without Rejection provokes thought to such a degree that each paragraph requires me to sit back and contemplate. The book fairly whistles! She has such a forceful voice and is so forthright...I will continue to savor this book as I would a kilo of Beluga... enough to enrich the day and digest what I have consumed.
-  Joan Messner, New York City
-  “Two months ago Art Without Rejection sang to me and I picked it up off the shelf at the Art Center. It has made a profound change in my life, practice and perspective...It's a guiding light for artists... My own paintings and practice have been profoundly influenced by Art Without Rejection. I am drinking her words of nourishment and strength...Ezguel Olvera, California
+      <p class="card__description">
+  Art Without Rejection, used in more than 200 universities and sold in major museums around the world, questions harmful practices in the art and gives some wise and original alternatives.It has helped and inspired many artists and teachers.Here are two examples.I generally whip right through a book, but Art Without Rejection provokes thought to such a degree that each paragraph requires me to sit back and contemplate. The book fairly whistles! She has such a forceful voice and is so forthright. I will continue to savor this book as I would a kilo of Beluga, enough to enrich the day and digest what I have consumed.Joan Messner, New York City
+  Two months ago Art Without Rejection sang to me and I picked it up off the shelf at the Art Center. It has made a profound change in my life, practice and perspective. It's a guiding light for artists.  My own paintings and practice have been profoundly influenced. I am drinking her words of nourishment and strength. Ezguel Olvera, California
       </p>
     </div>
   </div>
